Fixed random on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -53,3 +53,7 @@
     text-decoration: bold;
     position: fixed !important;
 }
+
+.toc-wrapper {
+    margin-right: 120px;
+}
